--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anjianshi/presets",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Reusable presets: ESLint, Prettier, tsconfig...",
   "homepage": "https://github.com/anjianshi/presets",
   "bugs": {
@@ -26,10 +26,14 @@
   },
   "peerDependencies": {
     "eslint": "^8.45.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "prettier-not-stubborn": "^3.0.3"
   },
   "peerDependenciesMeta": {
     "typescript": {
+      "optional": true
+    },
+    "prettier-not-stubborn": {
       "optional": true
     }
   }
