代码结构改造。拆分成多个包，以按需引用。并避免用不到某些功能时，报缺少 peerDependcies 的问题

--- a/typescript/tsconfig-build.json
+++ b/typescript/tsconfig-build.json
@@ -1,13 +1,13 @@
 {
   "extends": "./tsconfig-base",
   "compilerOptions": {
-    // [解析、输出格式 Parsing And Output Formats]
+    // [解析、输出格式]
     "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "declaration": true,
 
-    // [路径配置 Path Configuration]
+    // [路径配置]
     "outDir": "../../../dist"
   }
 }
