独立 typescript alias 配置

--- a/typescript/tsconfig-vite.json
+++ b/typescript/tsconfig-vite.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig-base",
+  "extends": ["./tsconfig-base", "./tsconfig-alias"],
   "compilerOptions": {
     // 启用 Vite 的文件解析特性（支持在开启了 Module 的项目里不带扩展名引入文件）
     "moduleResolution": "bundler",
@@ -11,6 +11,6 @@
     "skipLibCheck": true,
 
     // 补充类型定义，如 svg 等导入资源的类型；假定项目包含了以下依赖：vite、vite-plugin-svgr
-    "types": ["vite-plugin-svgr/client", "vite/client"]
+    "types": ["vite-plugin-svgr/client", "vite/client"],
   }
 }
